Consolidated dao tests.